--- a/app/src/main/res/layout/fragment_journal_bottom.xml
+++ b/app/src/main/res/layout/fragment_journal_bottom.xml
@@ -156,7 +156,7 @@
             android:fontFamily="@font/poppins_bold"
             android:maxLines="1"
             android:paddingEnd="10dp"
-            android:text="Pick Color"
+            android:text="Pilih warna"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -192,7 +192,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_bold"
             android:maxLines="1"
-            android:text="Add Image"
+            android:text="Tambahkan Foto Kondisi Terkini Anak Anda"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -231,7 +231,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_bold"
             android:maxLines="1"
-            android:text="Add Web Link"
+            android:text="Tambahkan Link Sesuatu Jika Perlu"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -248,7 +248,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/prime_dark"
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="gone"
@@ -271,7 +271,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_bold"
             android:maxLines="1"
-            android:text="Delete Note"
+            android:text="Hapus Journal"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
