--- a/app/src/main/res/layout/activity_recipes_detail.xml
+++ b/app/src/main/res/layout/activity_recipes_detail.xml
@@ -69,7 +69,7 @@
             android:layout_marginBottom="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginStart="15dp"
-            app:cardBackgroundColor="@color/pink"
+            app:cardBackgroundColor="@color/prime"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
