--- a/app/src/main/res/layout/activity_create_journal.xml
+++ b/app/src/main/res/layout/activity_create_journal.xml
@@ -130,7 +130,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_reguler"
             android:hint="@string/kiddo_age"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -164,7 +164,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_reguler"
             android:hint="@string/kiddo_weight_kg"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -198,7 +198,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_reguler"
             android:hint="@string/kiddo_height_cm"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -336,7 +336,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:background="@null"
         android:fontFamily="@font/poppins_reguler"
         android:hint="Masukkan Deskripsi Jurnal disini.."
