--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="chooseColor">#171C26</color>
+    <color name="transparant">#000000</color>
 
     <color name="ColorDefaultNote">#DD4F8A</color>
     <color name="ColorBlueNote">#4e33ff</color>
