modifying the account

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_medium"
         android:textColor="@color/pink_dark"
-        android:text="Usia Anak"
+        android:text="Jenis Kelamin"
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +157,7 @@
         android:fontFamily="@font/poppins_light"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:text="2 tahun"
+        android:text="Perempuan"
         android:layout_marginTop="5dp"
         android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
