--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -119,11 +119,47 @@
             android:id="@+id/line_chart"
             android:layout_width="350dp"
             android:layout_height="300dp"
-            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_statustitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/cv_pick_food"
-            app:layout_constraintTop_toBottomOf="@id/tv_title_chart"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_chart" />
+
+        <TextView
+            android:id="@+id/tv_statustitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Status Perkembangan Anak"
+            android:textColor="@color/prime_dark"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@+id/line_chart"
+            />
+
+        <TextView
+            android:id="@+id/tv_statusideal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/status_ideal"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_statustitle"
+            />
+
+        <TextView
+            android:id="@+id/tv_rentangideal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/rentang_ideal"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_statusideal"
+            />
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_pick_food"
@@ -134,7 +170,7 @@
             app:cardElevation="9dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/line_chart">
+            app:layout_constraintTop_toBottomOf="@id/tv_rentangideal">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
