change to temporary app name 'Gohaci'

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -27,7 +27,7 @@
         android:textSize="40sp"
         android:fontFamily="@font/poppins_medium"
         android:textColor="@color/white"
-        android:text="Hacigo"/>
+        android:text="Gohaci"/>
 
     <TextView
         android:id="@+id/desc_app"
