--- a/app/src/main/res/layout/item_rv_event.xml
+++ b/app/src/main/res/layout/item_rv_event.xml
@@ -77,7 +77,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="30dp"
                 android:textColor="@color/black"
-                tools:text="Youtube Gohaci Indonesia"/>
+                tools:text="Youtube Hacigo Indonesia"/>
 
 
         </RelativeLayout>
