--- a/app/src/main/res/layout/activity_pregnant_journal.xml
+++ b/app/src/main/res/layout/activity_pregnant_journal.xml
@@ -63,6 +63,62 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/tv_title_chart_pregnant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Grafik Perkembangan Berat Badan"
+            android:textColor="@color/prime_dark"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@+id/relativeBackground"
+            />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/line_chart_pregnant"
+            android:layout_width="350dp"
+            android:layout_height="300dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_statustitle_pregnant"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_chart_pregnant" />
+
+        <TextView
+            android:id="@+id/tv_statustitle_pregnant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Status Gizi Ibu"
+            android:textColor="@color/prime_dark"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@+id/line_chart_pregnant"
+            />
+
+        <TextView
+            android:id="@+id/tv_statusideal_pregnant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/status_ideal"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_statustitle_pregnant"
+            />
+
+        <TextView
+            android:id="@+id/tv_rentangideal_pregnant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/rentang_ideal"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_statusideal_pregnant"
+            />
+
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
@@ -75,7 +131,7 @@
             app:theme="@style/ThemeOverlay.search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/relativeBackground"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_rentangideal_pregnant"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
