--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,7 +108,7 @@
             android:id="@+id/tv_title_chart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Grafik Perkembangan Anak"
+            android:text="Grafik Pertumbuhan Anak"
             android:textColor="@color/prime_dark"
             android:fontFamily="@font/poppins_semibold"
             android:textAlignment="center"
