--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -207,7 +207,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cv_kia"
+            android:id="@+id/cv_knowledgebase"
             android:layout_width="300dp"
             android:layout_height="180dp"
             android:layout_marginTop="40dp"
@@ -217,6 +217,57 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cv_parenthood">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_knowledgebase"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="60dp"
+                    android:src="@drawable/ic_blocks" />
+
+                <TextView
+                    android:id="@+id/tv_title_knowledgebase"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="40dp"
+                    android:text="@string/title_knowledgebase"/>
+
+                <TextView
+                    android:id="@+id/iv_desc_knowledgebase"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_title_knowledgebase"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/poppins_reguler"
+                    android:text="@string/desc_knowledgebase"/>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_kia"
+            android:layout_width="300dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="30dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="9dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_knowledgebase">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
