--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -145,6 +145,7 @@
             android:fontFamily="@font/poppins_semibold"
             android:textAlignment="center"
             android:textSize="12sp"
+            android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@+id/tv_statustitle"
             />
 
@@ -157,8 +158,18 @@
             android:fontFamily="@font/poppins_semibold"
             android:textAlignment="center"
             android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_statusideal"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/tv_statusideal"/>
+
+        <TextView
+            android:id="@+id/tv_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Menurut Kemenkes"
+            android:fontFamily="@font/poppins_medium"
+            android:textAlignment="center"
+            android:textSize="10sp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_rentangideal"/>
 
 
         <androidx.cardview.widget.CardView
@@ -170,7 +181,7 @@
             app:cardElevation="9dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_rentangideal">
+            app:layout_constraintTop_toBottomOf="@id/tv_data">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
