--- a/app/src/main/res/layout/fragment_pregnant_field.xml
+++ b/app/src/main/res/layout/fragment_pregnant_field.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_medium"
-        android:text="Selamat atas kehamilannya Ibu!\n\nYuk isi data dibawah ini\nagar memudahkan pemantauan\nsi calon buah hati "
+        android:text="Selamat atas kehamilannya Ibu!\n\nYuk isi data dibawah ini"
         android:textAlignment="center"
         android:textColor="@color/prime"
         android:textSize="18sp"
